<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/full_app_name"
        android:id="@+id/textview1"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="165dp"
        android:text="@string/viewlistings"
        android:id="@+id/button1"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="245dp"
        android:text="@string/findarea"
        android:id="@+id/button2"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="325dp"
        android:text="@string/postlisting"
        android:id="@+id/button3"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
