...
        android:layout_marginTop="100dp"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionSend"
        android:hint="@string/enteraddress"
        android:id="@+id/searchAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginTop="100dp"
...
